--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,9 @@
   </head>
 
   <body>
+    <h1> This is Cellular</h!>
 
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>This is an about us section for  <strong>cellular</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
 
   </body>
 
